--- a/graph.html
+++ b/graph.html
@@ -8,7 +8,7 @@
     function drawChart() {
 
       var data = new google.visualization.DataTable();
-      var csvFile = $.csv.toArray("csv.csv")
+      var csvFile = $.csv.toArray("spreadsheet.csv")
       data.addColumn('number', 'Day');
       data.addColumn('number', 'SSD');
       data.addColumn('number', 'HDD');
