--- a/graph.html
+++ b/graph.html
@@ -1,14 +1,19 @@
   <html>
   <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript" src="jquery-csv/src/jquery.csv.js"></script>
+    <script src="jquery-3.2.1.js"
     <script type="text/javascript">
             google.charts.load('current', {'packages':['line']});
       google.charts.setOnLoadCallback(drawChart);
 
+      console.log(111);
     function drawChart() {
 
       var data = new google.visualization.DataTable();
-      var csvFile = $.csv.toArray("spreadsheet.csv")
+      var $ = require('jquery-3.2.1.js');
+      require('./jquery-csv/src/jquery.csv.js');
+      var csvFile = $.csv.toArrays("data.csv");
       data.addColumn('number', 'Day');
       data.addColumn('number', 'SSD');
       data.addColumn('number', 'HDD');
@@ -16,11 +21,12 @@
       data.addColumn('number', 'Chromebook')
 
       data.addRows(csvFile);
+      var subtitle = csvFile.toString();
 
       var options = {
         chart: {
           title: 'Box Office Earnings in First Two Weeks of Opening',
-          subtitle: 'in millions of dollars (USD)'
+          subtitle: 'subtitle'
         },
         width: 900,
         height: 500
@@ -35,5 +41,6 @@
   </head>
   <body>
     <div id="linechart_material" style="width: 900px; height: 500px"></div>
+    <div id="thingy"></div>
   </body>
 </html>
