--- a/graph.html
+++ b/graph.html
@@ -1,7 +1,7 @@
   <html>
   <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script type="text/javascript" src="jquery-csv/src/jquery.csv.js"></script>
+    <script type="text/javascript" src="jquery.csv.js"></script>
     <script src="jquery-3.2.1.js"
     <script type="text/javascript">
             google.charts.load('current', {'packages':['line']});
@@ -11,8 +11,8 @@
     function drawChart() {
 
       var data = new google.visualization.DataTable();
-      var $ = require('jquery-3.2.1.js');
-      require('./jquery-csv/src/jquery.csv.js');
+      var $ = require("jquery-3.2.1.js");
+      require("jquery.csv.js");
       var csvFile = $.csv.toArrays("data.csv");
       data.addColumn('number', 'Day');
       data.addColumn('number', 'SSD');
