--- a/graph.html
+++ b/graph.html
@@ -7,13 +7,10 @@
     google.charts.load('current', {'packages':['line']});
     google.charts.setOnLoadCallback(drawChart);
 
-    var $ = require("jquery-3.2.1.js");
 
     function drawChart() {
 
       var data = new google.visualization.DataTable();
-
-      var csvFile = $.csv.toArrays("data.csv")
 
       data.addColumn('number', 'Day');
       data.addColumn('number', 'SSD');
@@ -27,7 +24,7 @@
       var options = {
         chart: {
           title: 'Box Office Earnings in First Two Weeks of Opening',
-          subtitle: ''su''b
+          subtitle: ''
         },
         width: 900,
         height: 500
