--- a/graph.html
+++ b/graph.html
@@ -13,7 +13,13 @@
       data.addColumn('number', 'SSD');
       data.addColumn('number', 'HDD');
       data.addColumn('number', 'Flashdrive');
-      data.addColumn('number', 'Chromebook')
+      data.addColumn('number', 'Chromebook');
+
+      data.addRow([
+          [1,2,3],
+          [1,2,5],
+          [6,21,1]
+        ]);
 
       var options = {
         chart: {
