--- a/graph.html
+++ b/graph.html
@@ -2,8 +2,8 @@
   <head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
-    google.charts.load('current', {'packages':['line']});
-    google.charts.setOnLoadCallback(drawChart);
+      google.charts.load('current', {'packages':['line']});
+      google.charts.setOnLoadCallback(drawChart);
 
     function drawChart() {
 
@@ -15,16 +15,20 @@
       data.addColumn('number', 'Flashdrive');
       data.addColumn('number', 'Chromebook');
 
-      data.addRow([
-          [1,2,3],
-          [1,2,5],
-          [6,21,1]
-        ]);
+      let opz = [
+          [1,2,3,3,7],
+          [1,2,5,123,1],
+          [6,21,1,16,7],
+          [12,5,7,8,1],
+          [15,17,234,86,23]
+        ]
+
+      data.addRows(opz);
 
       var options = {
         chart: {
-          title: 'Box Office Earnings in First Two Weeks of Opening',
-          subtitle: ''
+          title: 'CHANGE ME',
+          subtitle: 'THIS IS A SUB'
         },
         width: 900,
         height: 500
@@ -34,7 +38,6 @@
 
       chart.draw(data, google.charts.Line.convertOptions(options));
     }
-    drawChart();
     </script>
   </head>
   <body>
